# talemon

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.toml
docs/: PRD.md  SPEC.md
src/: __init__.py
src/core/: config.py  database.py  logging.py  storage.py
src/models/: __init__.py  base.py  info.py  monitor.py  page.py  schema.sql  snapshot.py
src/services/worker/: __init__.py  browser.py  hasher.py  snapshot.py
tests/: test_snapshot.py
